src/test/deca/context/valid/class/48-appelMethode.deca
/* Description:
    teste la regle (3.31)   de la vérification contextuelles
    print une expression different de int,float,string

    Historique:
      cree le 22/01/2020
*/

class Point2D {
  int x;
  int y;
  void diag(int a){
    x = x + a;
    y = y + a;
  }
}
class Point3D extends Point2D{
  int z;
  void diag(int a){
    x = x + a;
    y = y + a;
    z = z + a;
  }
}
{
  Point2D p2;
  Point3D p3;
  p2 = p3;
  p2.diag(3); // il doit appeler la deuxieme définition definie a 19
}
