src/test/deca/context/invalid/class/80-printMethode.deca
/* Description:
    teste la regle (3.31)   de la vérification contextuelles
    print une expression different de int,float,string

    Historique:
      cree le 22/01/2020
*/

class A {
  int methode(){
    return 5;
  }
  void methode2(){
    println(methode);
  }
}
class B {

}
